--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Simple investment portfolio visualizer",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "David Siro",
-  "license": "ISC"
+  "dependencies": {
+    "mocha": "^7.0.1"
+  }
 }
