--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "db-migrate": "^0.11.6",
     "db-migrate-pg": "^1.0.0",
     "dotenv": "^8.2.0",
-    "mocha": "^7.0.1"
+    "mocha": "^7.0.1",
+    "pg": "^7.18.2"
   }
 }
