--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "db-migrate-pg": "^1.0.0",
     "dotenv": "^8.2.0",
     "mocha": "^7.0.1",
+    "moment": "^2.24.0",
     "pg": "^7.18.2"
   }
 }
