--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "David Siro",
   "dependencies": {
     "axios": "^0.19.2",
+    "csv-parse": "^4.8.8",
     "db-migrate": "^0.11.6",
     "db-migrate-pg": "^1.0.0",
     "dotenv": "^8.2.0",
