--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.2.0",
     "mocha": "^7.0.1",
     "moment": "^2.24.0",
-    "pg": "^7.18.2"
+    "pg": "^7.18.2",
+    "winston": "^3.2.1"
   }
 }
