--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3'
 services:
   pi-db:
     image: postgres:12
+    ports:
+      - "127.0.0.1:25432:5432"
     env_file:
       - .docker.env
     environment:
@@ -9,7 +11,7 @@ services:
       - POSTGRES_USER=${PGUSER}
       - POSTGRES_PASSWORD=${PGPASSWORD}
     volumes:
-    - ~/.portfolio-insight/data:/var/lib/postgresql/data
+      - postgres-storage:/var/lib/postgresql/data
   pi-data-collector:
     depends_on:
       - pi-db
@@ -20,3 +22,12 @@ services:
     environment:
       - PGHOST=pi-db
       - PGPORT=5432
+  grafana:
+    image: grafana/grafana:latest
+    ports:
+      - "127.0.0.1:3000:3000"
+    volumes:
+      - grafana-storage:/var/lib/grafana
+volumes:
+  postgres-storage:
+  grafana-storage:
